feat: add header authentication
