# dist/swagger.json
@@ -1,141 +1,188 @@
 {
-	"basePath": "/",
-	"consumes": [
-		"application/json"
-	],
-	"definitions": {},
-	"info": {
-		"title": "rsclone-be",
-		"version": "0.0.0",
-		"contact": {}
-	},
-	"paths": {
-		"/statistics": {
-			"get": {
-				"operationId": "GetAll",
-				"produces": [
-					"application/json"
-				],
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"schema": {
-							"items": {
-								"additionalProperties": true
-							},
-							"type": "array"
-						}
-					}
-				},
-				"tags": [
-					"StatisticsController"
-				],
-				"security": [],
-				"parameters": []
-			},
-			"post": {
-				"operationId": "Create",
-				"produces": [
-					"application/json"
-				],
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"schema": {
-							"additionalProperties": true
-						}
-					}
-				},
-				"tags": [
-					"StatisticsController"
-				],
-				"security": [],
-				"parameters": [
-					{
-						"in": "body",
-						"name": "body",
-						"schema": {
-							"properties": {
-								"userId": {
-									"type": "string"
-								},
-								"score": {
-									"type": "string"
-								},
-								"totalTime": {
-									"type": "string"
-								}
-							},
-							"title": "CreateBody",
-							"type": "object",
-							"required": [
-								"userId",
-								"score",
-								"totalTime"
-							]
-						}
-					}
-				]
-			}
-		},
-		"/statistics/{userId}": {
-			"get": {
-				"operationId": "GetByUserId",
-				"produces": [
-					"application/json"
-				],
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"schema": {
-							"items": {
-								"additionalProperties": true
-							},
-							"type": "array"
-						}
-					}
-				},
-				"tags": [
-					"StatisticsController"
-				],
-				"security": [],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "userId",
-						"required": true,
-						"type": "string"
-					}
-				]
-			},
-			"delete": {
-				"operationId": "DeleteByUserId",
-				"produces": [
-					"application/json"
-				],
-				"responses": {
-					"204": {
-						"description": "No content"
-					}
-				},
-				"tags": [
-					"StatisticsController"
-				],
-				"security": [],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "userId",
-						"required": true,
-						"type": "string"
-					}
-				]
-			}
-		}
-	},
-	"produces": [
-		"application/json"
-	],
-	"swagger": "2.0",
-	"securityDefinitions": {}
+  "basePath": "/",
+  "consumes": ["application/json"],
+  "definitions": {},
+  "info": {
+    "title": "rsclone-be",
+    "version": "0.0.0",
+    "contact": {}
+  },
+  "paths": {
+    "/statistics/all": {
+      "get": {
+        "operationId": "GetAll",
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "Ok",
+            "schema": {
+              "items": {
+                "additionalProperties": true
+              },
+              "type": "array"
+            }
+          }
+        },
+        "tags": ["StatisticsController"],
+        "security": [],
+        "parameters": []
+      }
+    },
+    "/statistics": {
+      "post": {
+        "operationId": "Create",
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "Ok",
+            "schema": {
+              "additionalProperties": true
+            }
+          }
+        },
+        "tags": ["StatisticsController"],
+        "security": [
+          {
+            "api_token": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "schema": {
+              "properties": {
+                "score": {
+                  "type": "string"
+                },
+                "totalTime": {
+                  "type": "string"
+                }
+              },
+              "title": "CreateBody",
+              "type": "object",
+              "required": ["score", "totalTime"]
+            }
+          }
+        ]
+      },
+      "get": {
+        "operationId": "GetByUserId",
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "Ok",
+            "schema": {
+              "items": {
+                "additionalProperties": true
+              },
+              "type": "array"
+            }
+          }
+        },
+        "tags": ["StatisticsController"],
+        "security": [
+          {
+            "api_token": []
+          }
+        ],
+        "parameters": []
+      },
+      "delete": {
+        "operationId": "DeleteByUserId",
+        "produces": ["application/json"],
+        "responses": {
+          "204": {
+            "description": "No content"
+          }
+        },
+        "tags": ["StatisticsController"],
+        "security": [
+          {
+            "api_token": []
+          }
+        ],
+        "parameters": []
+      }
+    },
+    "/auth/login": {
+      "post": {
+        "operationId": "Create",
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "Ok",
+            "schema": {
+              "additionalProperties": true
+            }
+          }
+        },
+        "tags": ["AuthController"],
+        "security": [],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "schema": {
+              "properties": {
+                "userName": {
+                  "type": "string"
+                },
+                "password": {
+                  "type": "string"
+                }
+              },
+              "title": "CreateBody",
+              "type": "object",
+              "required": ["userName", "password"]
+            }
+          }
+        ]
+      }
+    },
+    "/auth/register": {
+      "post": {
+        "operationId": "Register",
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "Ok",
+            "schema": {
+              "additionalProperties": true
+            }
+          }
+        },
+        "tags": ["AuthController"],
+        "security": [],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "schema": {
+              "properties": {
+                "userName": {
+                  "type": "string"
+                },
+                "password": {
+                  "type": "string"
+                }
+              },
+              "title": "RegisterBody",
+              "type": "object",
+              "required": ["userName", "password"]
+            }
+          }
+        ]
+      }
+    }
+  },
+  "produces": ["application/json"],
+  "swagger": "2.0",
+  "securityDefinitions": {
+    "api_key": {
+      "type": "apiKey",
+      "name": "access_token",
+      "in": "header"
+    }
+  }
 }
