# routes/auth.ts
@@ -1,21 +1,30 @@
-import { BodyProp, Header, Controller, Delete, Get, Post, Route, Tags } from 'tsoa';
+import {
+  BodyProp,
+  Header,
+  Controller,
+  Delete,
+  Get,
+  Post,
+  Route,
+  Tags,
+} from 'tsoa';
 
 import md5 from 'md5';
-import {v4 as uuid} from 'uuid';
+import { v4 as uuid } from 'uuid';
 import { UsersModel } from '../types/user';
 import { SessionsModel } from '../types/sessions';
+import { ServerError } from './../types/errors/serverErrors';
 
-const { PG_SALT } = process.env;
+//const { PG_SALT } = process.env;
 
 const getPasswordHash = (password) => {
-  console.log("PG_SALT: " + PG_SALT)
-  const pgSalt = ""
+  const PG_SALT = 'qwe123';
+  console.log('PG_SALT: ' + PG_SALT);
   return md5(password + PG_SALT);
-}
+};
 
 const generateToken = (userId) => {
-
-  const token = uuid()
+  const token = uuid();
 
   const newSession = new SessionsModel({
     token: token,
@@ -23,47 +32,50 @@ const generateToken = (userId) => {
     expiresAt: new Date(Date.now() + 3600 * 1000).toISOString(),
   });
 
-  newSession
+  return newSession
     .save()
-    .then((item) => {
-      console.log('Session is saved '+ item)
+    .then((item: any) => {
+      return item.token;
     })
-    .catch((err) => console.log('Session isnt saved ' + err));
-  return token;
-}
+    .catch((err) => console.log('Session is not saved ' + err));
+};
+
+const removeOldSessions = (userId) => {
+  return SessionsModel.deleteMany({ userId: userId })
+    .then(() => {
+      return userId;
+    })
+    .catch((err) => console.log('old sessions not found'));
+};
 
 @Route('/auth')
 @Tags('AuthController')
 export class AuthController extends Controller {
-  
-
   @Post('/login')
   public async create(
     @BodyProp() userName: string,
     @BodyProp() password: string
   ): Promise<any> {
-    
-    console.log("login request: username - " + userName + " password - " + password );
     const passwordHash = getPasswordHash(password);
 
-
-    const newUser = new UsersModel({
+    return UsersModel.findOne({
       userName: userName,
       passwordHash: passwordHash,
-    });
-
-    console.log("log: ")
-    return UsersModel.findOne({ userName: userName, passwordHash: passwordHash })
-    .then((user: any) => {
-      console.log("log: " + user)
-      this.setStatus(200);
-      const token = generateToken(user._id);
-      return { token: token};
     })
-    .catch((err: any) => {
-      this.setStatus(403)
-      return { reason: 'Invalid username or password'}
-    });
+      .then((user: any) => {
+        return removeOldSessions(user._id);
+      })
+      .then((user: any) => {
+        return generateToken(user._id);
+      })
+      .then((token: any) => {
+        this.setStatus(200);
+        return { token: token };
+      })
+      .catch((err: any) => {
+        this.setStatus(403);
+        return { reason: 'Invalid username or password' };
+      });
   }
 
   @Post('/register')
@@ -78,33 +90,28 @@ export class AuthController extends Controller {
       passwordHash: passwordHash,
     });
 
-    const existingUserCheck = UsersModel.findOne({ userName: userName})
-    .then((user: any) => {
-      if (user) {
-        this.setStatus(409);
-        console.log("user exist: " + user)
-      } else {
-        //return { reason: 'This username already exists'}
-        return user;
-      }
-    })
-    .catch((err: any) => {
-      console.log("err: " + err);
-    });
+    return UsersModel.findOne({ userName: userName })
+      .then((user: any) => {
+        console.log('user: ' + JSON.stringify(user));
 
-    console.log("existingUserCheck: " + existingUserCheck.userName);
-    if (existingUserCheck) return { reason: 'This username already exists'};
-
-    return newUser
-      .save()
-      .then((user) => {
-
-      const token = generateToken(user._id);
-      console.log ("token: " + token);
-      this.setStatus(201);
-      return { token: token};
+        if (user) {
+          return Promise.reject(
+            new ServerError('This username already exists', 409)
+          );
+        } else return null;
       })
-      .catch((err) => this.setStatus(500));
-      
+      .then(() => {
+        return newUser.save();
+      })
+      .then((user: any) => {
+        return generateToken(user._id);
+      })
+      .then((token: any) => {
+        this.setStatus(201);
+        return { token: token };
+      })
+      .catch((err: any) => {
+        return Promise.reject(new ServerError(err, 409));
+      });
   }
 }
