# routes/statistics.ts
@@ -1,22 +1,37 @@
 import { GameModel } from '../types/game';
-import { BodyProp, Controller, Delete, Get, Post, Route, Tags } from 'tsoa';
+import {
+  BodyProp,
+  Controller,
+  Delete,
+  Get,
+  Post,
+  Route,
+  Tags,
+  Security,
+  Request,
+} from 'tsoa';
 
 @Route('/statistics')
 @Tags('StatisticsController')
 export class StatisticsController extends Controller {
-  @Get()
+  @Get('/all')
   public async getAll(): Promise<any[]> {
     return GameModel.find({})
-      .then((items: any) => items)
+      .then((items: any) => {
+        return items;
+      })
       .catch((err: any) => this.setStatus(500));
   }
 
+  @Security('api_token')
   @Post()
   public async create(
-    @BodyProp() userId: string,
     @BodyProp() score: string,
-    @BodyProp() totalTime: string
+    @BodyProp() totalTime: string,
+    @Request() req: any
   ): Promise<any> {
+    const userId = req.app.get('session');
+
     const newGame = new GameModel({
       userId: userId,
       score: score,
@@ -33,17 +48,21 @@ export class StatisticsController extends Controller {
       .catch((err) => this.setStatus(500));
   }
 
-  @Get('/{userId}')
-  public async getByUserId(userId: string): Promise<any[]> {
+  @Security('api_token')
+  @Get()
+  public async getByUserId(@Request() req: any): Promise<any[]> {
+    const userId = req.app.get('session');
     return GameModel.find({ userId: userId })
       .then((items: any) => {
-        console.log(items)
-        return items})
+        return items;
+      })
       .catch((err: any) => this.setStatus(500));
   }
 
-  @Delete('/{userId}')
-  public async deleteByUserId(userId: string): Promise<void> {
+  @Security('api_token')
+  @Delete()
+  public async deleteByUserId(@Request() req: any): Promise<void> {
+    const userId = req.app.get('session');
     GameModel.deleteMany({ userId: userId })
       .then(() => this.setStatus(204))
       .catch((err) => this.setStatus(500));
