# types/user.ts
@@ -1,15 +1,15 @@
 import mongoose from 'mongoose';
 
-const Userschema = new mongoose.Schema(
+const UserSchema = new mongoose.Schema(
   {
-    userName: { type: String, required: true, trim: true, unique : true },
-    passwordHash: { type: String, required: true, trim: true }
+    userName: { type: String, required: true, trim: true, unique: true },
+    passwordHash: { type: String, required: true, trim: true },
   },
   {
     versionKey: false,
   }
 );
 
-const UsersModel = mongoose.model('Users', Userschema);
+const UsersModel = mongoose.model('Users', UserSchema);
 
 export { UsersModel };
